# llvm_svml_intrinsic_generator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Not_Mapped_Info.txt  README.md  SVML_Test.cpp  aligned_array.h  create_clang_svml_intrinsic.cpp  create_clang_svml_intrinsic.h  sincos.asm  svml_assembly_creator.cpp  svml_assembly_creator.h  svml_intrinsics.txt  svml_intrinsics_vs.txt  svml_prolog.h  svml_test_creator.cpp  svml_test_creator.h  svml_test_definitions.h  svml_test_oldstuff.cpp  vdecl_list.txt
generated_code/: avx512_svml_intrin.h  avx512_svml_test.cpp  avx_svml_intrin.h  avx_svml_test.cpp
